actualize swagger doc
