# backend/cmd/docs/swagger.json
@@ -3,12 +3,122 @@
     "info": {
         "description": "API Server for Tomato-timer",
         "title": "Tomato-timer backend",
-        "contact": {},
+        "contact": {
+            "name": "Tomato timer",
+            "url": "https://github.com/E7ast1c/tomato-timer"
+        },
         "version": "1.1"
     },
     "host": "localhost:8081",
     "basePath": "/",
     "paths": {
+        "/auth/get-user-settings": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get user settings",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseTemplate"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseTemplate"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseTemplate"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseTemplate"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/set-user-settings": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "set custom user settings",
+                "parameters": [
+                    {
+                        "description": "User settings",
+                        "name": "DefaultDuration",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UserTimerSettings"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseTemplate"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseTemplate"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseTemplate"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseTemplate"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/health-check": {
             "get": {
                 "consumes": [
@@ -195,6 +305,33 @@
                     "minLength": 6
                 }
             }
+        },
+        "models.UserTimerSettings": {
+            "type": "object",
+            "properties": {
+                "alarmTrack": {
+                    "type": "string"
+                },
+                "defaultDuration": {
+                    "type": "integer"
+                },
+                "longBreakDuration": {
+                    "type": "integer"
+                },
+                "shortBreakDuration": {
+                    "type": "integer"
+                },
+                "tickTrack": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "x-access-token",
+            "in": "header"
         }
     }
 }
